Revert MapBuilder.immutableMap() change
Use MapBuilder.map() instead in LoggingAuditTrailTests.java.